<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.trip.TripAddFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/addtrip">


        <LinearLayout
            android:id="@+id/fmTripAddLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="13dp">

            <TextView
                android:id="@+id/fmTripAddError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:textSize="11sp"
                app:lineHeight="20dp" />

            <EditText
                android:id="@+id/fmTripAddName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:autofillHints=""
                android:background="@drawable/text"
                android:ems="10"
                android:hint="@string/label_name"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/fmTripAddDestination"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:autofillHints=""
                android:background="@drawable/text"
                android:ems="10"
                android:layout_marginTop="10dp"
                android:hint="@string/label_destination"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/fmTripAddStartDate"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:autofillHints=""
                android:background="@drawable/text"
                android:ems="10"
                android:layout_marginTop="10dp"
                android:hint="@string/label_start_date"
                android:inputType="date"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/fmTripAddEndDate"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:autofillHints=""
                android:background="@drawable/text"
                android:ems="10"
                android:layout_marginTop="10dp"
                android:hint="@string/label_end_date"
                android:inputType="date"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/fmTripAddDescription"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:autofillHints=""
                android:background="@drawable/text"
                android:ems="10"
                android:layout_marginTop="10dp"
                android:hint="@string/label_description"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/fmTripAddRisk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="15dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="20dp"
                android:text="@string/label_risk"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <Button
                android:id="@+id/fmTripAddButton"
                android:layout_width="149dp"
                android:layout_height="57dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/buttom"
                android:text="@string/label_add"
                android:textSize="15sp" />


        </LinearLayout>
    </ScrollView>
</FrameLayout>